# pcpy

./: .gitignore  LICENSE.md  README.md  __init__.py  constants.py  makecatalog.py  operation.py  pcset.py  pyproject.toml  query.py  relation.py
pcpy/: __init__.py  catalog.json  constants.py  operation.py  pcset.py  query.py  relation.py
test/: test_operation.py  test_pcset.py  test_query.py  test_relation.py
tests/: test_operation.py  test_query.py
