[tool.poetry]
name = "pcpy"
version = "0.1.0"
description = "A Python package for pc set operations, relation measures, and queries."
authors = ["Yota Kobayashi <yota@programsounds.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
