[tool.poetry]
name = "pcpy"
version = "0.1.0"
description = "Python library for pcset operations, relation measures, and queries."
authors = ["Yota Kobayashi <yota@programsounds.net>"]
readme = "README.md"
license = "MIT"
homepage = ""  # Sphinx document on GitHub Pages (TODO)
repository = "https://github.com/programsounds/pcpy"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
